--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -405,8 +405,20 @@ input:-webkit-autofill:active {
 .mb0 {
   margin-bottom: 0 !important;
 }
+.mb74 {
+  margin-bottom: 74px !important;
+}
+.mb8 {
+  margin-bottom: 8px !important;
+}
 .ml0 {
   margin-left: 0 !important;
+}
+.m-auto {
+  margin: 0 auto 0 auto;
+}
+.text-nowrap {
+  white-space: nowrap;
 }
 
 input::-webkit-outer-spin-button,
@@ -1026,6 +1038,15 @@ input::-webkit-inner-spin-button {
     flex: 1;
   }
 }
+// 포지션 postion css
+.position {
+  &.absolute {
+    position: absolute;
+  }
+  &.relative {
+    position: relative;
+  }
+}
 // 영역 css 일부
 .px-18px {
   padding-right: 18px;
@@ -1049,8 +1070,20 @@ input::-webkit-inner-spin-button {
 .h-18px {
   height: 18px;
 }
+.h-74px {
+  height: 74px;
+}
+//폰트 사이즈
 .font-size-12 {
   font-size: 12px;
+}
+.font-size-18 {
+  font-size: 18px;
+}
+
+// 폰트 두께
+.font-weight-600 {
+  font-weight: 600;
 }
 
 //배경 css
@@ -1071,7 +1104,33 @@ input::-webkit-inner-spin-button {
 .font-primary {
   color: modules.$color_primary;
 }
+.font-success {
+  color: modules.$color_statesSuccess;
+}
+.font-secondary {
+  color: modules.$color_secondary
+}
 
+// 폰트 정렬
+.text-start {
+  text-align: left;
+}
+.text-center {
+  text-align: center;
+}
+.text-end {
+  text-align: right;
+}
+
+// 너비값
+.w-20 {
+  max-width: 20%;
+  width: 100%;
+}
+.w-53px {
+  max-width: 53px;
+  width: 100%;
+}
 
 // 조건없을경우 일반 적인 공통 버튼 css
 .btn-common {
