--- a/src/assets/sass/_util.scss
+++ b/src/assets/sass/_util.scss
@@ -61,7 +61,7 @@
     background-color: #c7c7c7;
     border-radius: $final-radius;
   }
-  &::-webkit-scrollbar-thumb:vertical:hover {
+  &::-webkit-scrollbar-thumb:hover {
     background-color: #929292;
   }
 }
