--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -1080,6 +1080,12 @@ input::-webkit-inner-spin-button {
 .font-size-12 {
   font-size: 12px;
 }
+.font-size-14 {
+  font-size: 14px;
+}
+.font-size-16 {
+  font-size: 16px;
+}
 .font-size-18 {
   font-size: 18px;
 }
