--- a/src/assets/sass/_targeting.scss
+++ b/src/assets/sass/_targeting.scss
@@ -692,6 +692,112 @@ ul.targeting-detail-condition-wrap {
 }
 // 타겟팅 상세 조건 (4단계) -- 끝
 
+// 타겟팅 세그 구분 (6단계)
+.seg-wrap {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    //border: 1px solid #000;
+    .seg-header {
+        height: 113px;
+        border-bottom: 1px solid modules.$color_blueG_300;
+        width: 100%;
+        position: relative;
+        .seg-header-inner {
+            .seg-type-title {
+                color: modules.$color_secondary;
+                font-size: 18px;
+                height: 27px;
+                display: flex;
+                font-weight: 600;
+                align-items: center;
+                margin-bottom: 16px;
+            }
+            .seg-type-info {
+                color: modules.$color_blueG_800;
+                font-size: 14px;
+                height: 21px;
+                display: flex;
+                font-weight: 600;
+                align-items: center;
+                margin-bottom: 8px;
+            }
+            .button {
+                position: absolute;
+                right: 0;
+                bottom: 26px;
+                cursor: pointer;
+            }
+        }
+    }
+    .seg-items-page {
+        width: 100%;
+        height: 100%;
+        &.ai-page {
+            border: 1px solid #000;
+            .ai-page-inner {
+                border: 1px solid #000;
+                width: 880px;
+                margin: 0 auto;
+            }
+        }
+        // 공통 박스 css
+        .deps-box {
+            border-radius: 4px;
+            border: 1px solid modules.$color_blueG_300;
+            width: 128px;
+            .box-header {
+                display: flex;
+                align-items: center;
+                justify-content: start;
+                padding: 0 16px;
+                background-color: modules.$color_blueG_200;
+                height: 37px;
+                font-size: 14px;
+                font-weight: 600;
+            }
+            .box-body {
+                display: flex;
+                align-items: center;
+                justify-content: end;
+                padding: 0 16px;
+                background-color: modules.$color_white;
+                height: 37px;
+                font-size: 14px;
+                font-weight: 500;
+            }
+        }
+        .seg-deps1 {
+            .deps1-box {
+
+            }
+            display: flex;
+            border: 1px solid #000;
+            width: 100%;
+            .seg-deps2 {
+                .deps2-box {
+
+                }
+                display: flex;
+                border: 1px solid #000;
+                width: 100%;
+                .seg-deps3 {
+                    .deps3-box {
+
+                    }
+                    display: flex;
+                    border: 1px solid #000;
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
 .targeting-contents.side-show{
     .targeting-side{
         flex: 0 0 modules.$side-width;
